# diptych

./: README.md  configure.ac  diptych.cc
.github/workflows/: ubuntu.yml
src/: Frame.cc  Frame.h  Gopts.h  Makefile.am  Padding.h  diptych.cc  diptych.h  log.h
